Fix blurry results in 4-point Perspective Transform mode

It looks like if we try to apply the transform in two stages, the
intermediate image gets collapsed into a few-pixels-wide chunk and
therefore causing the final image to be extremely blurry.

BUG:447255
(cherry picked from commit 634b939438e3cd2f5e16d744ff043bf8fd7d9674)